trunk/verif/Spin/Src5.1.6/y.output
Terminals which are not used

   MTYPE
   LABEL
   NON_ATOMIC


Grammar

    0 $accept: program $end

    1 program: units

    2 units: unit
    3      | units unit

    4 unit: proc
    5     | init
    6     | claim
    7     | events
    8     | one_decl
    9     | utype
   10     | c_fcts
   11     | ns
   12     | SEMI
   13     | error

   14 @1: /* empty */

   15 @2: /* empty */

   16 proc: inst proctype NAME @1 '(' decl ')' @2 Opt_priority Opt_enabler body

   17 proctype: PROCTYPE
   18         | D_PROCTYPE

   19 inst: /* empty */
   20     | ACTIVE
   21     | ACTIVE '[' CONST ']'
   22     | ACTIVE '[' NAME ']'

   23 @3: /* empty */

   24 init: INIT @3 Opt_priority body

   25 @4: /* empty */

   26 claim: CLAIM @4 body

   27 @5: /* empty */

   28 events: TRACE @5 body

   29 @6: /* empty */

   30 utype: TYPEDEF NAME @6 '{' decl_lst '}'

   31 nm: NAME
   32   | INAME

   33 @7: /* empty */

   34 ns: INLINE nm '(' @7 args ')'

   35 c_fcts: ccode
   36       | cstate

   37 cstate: C_STATE STRING STRING
   38       | C_TRACK STRING STRING
   39       | C_STATE STRING STRING STRING
   40       | C_TRACK STRING STRING STRING

   41 ccode: C_CODE
   42      | C_DECL

   43 cexpr: C_EXPR

   44 @8: /* empty */

   45 @9: /* empty */

   46 body: '{' @8 sequence OS @9 '}'

   47 sequence: step
   48         | sequence MS step

   49 step: one_decl
   50     | XU vref_lst
   51     | NAME ':' one_decl
   52     | NAME ':' XU
   53     | stmnt
   54     | stmnt UNLESS stmnt

   55 vis: /* empty */
   56    | HIDDEN
   57    | SHOW
   58    | ISLOCAL

   59 asgn: /* empty */
   60     | ASGN

   61 one_decl: vis TYPE var_list
   62         | vis UNAME var_list
   63         | vis TYPE asgn '{' nlst '}'

   64 decl_lst: one_decl
   65         | one_decl SEMI decl_lst

   66 decl: /* empty */
   67     | decl_lst

   68 vref_lst: varref
   69         | varref ',' vref_lst

   70 var_list: ivar
   71         | ivar ',' var_list

   72 ivar: vardcl
   73     | vardcl ASGN expr
   74     | vardcl ASGN ch_init

   75 ch_init: '[' CONST ']' OF '{' typ_list '}'

   76 vardcl: NAME
   77       | NAME ':' CONST
   78       | NAME '[' CONST ']'

   79 varref: cmpnd

   80 pfld: NAME

   81 @10: /* empty */

   82 pfld: NAME @10 '[' expr ']'

   83 @11: /* empty */

   84 cmpnd: pfld @11 sfld

   85 sfld: /* empty */
   86     | '.' cmpnd

   87 stmnt: Special
   88      | Stmnt

   89 @12: /* empty */

   90 Special: varref RCV @12 rargs

   91 @13: /* empty */

   92 Special: varref SND @13 margs
   93        | IF options FI

   94 @14: /* empty */

   95 Special: DO @14 options OD
   96        | BREAK
   97        | GOTO NAME
   98        | NAME ':' stmnt

   99 Stmnt: varref ASGN expr
  100      | varref INCR
  101      | varref DECR

  102 @15: /* empty */

  103 Stmnt: PRINT '(' STRING @15 prargs ')'
  104      | PRINTM '(' varref ')'
  105      | PRINTM '(' CONST ')'
  106      | ASSERT full_expr
  107      | ccode

  108 @16: /* empty */

  109 Stmnt: varref R_RCV @16 rargs

  110 @17: /* empty */

  111 Stmnt: varref RCV @17 LT rargs GT

  112 @18: /* empty */

  113 Stmnt: varref R_RCV @18 LT rargs GT

  114 @19: /* empty */

  115 Stmnt: varref O_SND @19 margs
  116      | full_expr
  117      | ELSE

  118 @20: /* empty */

  119 Stmnt: ATOMIC '{' @20 sequence OS '}'

  120 @21: /* empty */

  121 Stmnt: D_STEP '{' @21 sequence OS '}'

  122 @22: /* empty */

  123 Stmnt: '{' @22 sequence OS '}'

  124 @23: /* empty */

  125 @24: /* empty */

  126 Stmnt: INAME @23 '(' args ')' @24 Stmnt

  127 options: option
  128        | option options

  129 @25: /* empty */

  130 option: SEP @25 sequence OS

  131 OS: /* empty */
  132   | SEMI

  133 MS: SEMI
  134   | MS SEMI

  135 aname: NAME
  136      | PNAME

  137 expr: '(' expr ')'
  138     | expr '+' expr
  139     | expr '-' expr
  140     | expr '*' expr
  141     | expr '/' expr
  142     | expr '%' expr
  143     | expr '&' expr
  144     | expr '^' expr
  145     | expr '|' expr
  146     | expr GT expr
  147     | expr LT expr
  148     | expr GE expr
  149     | expr LE expr
  150     | expr EQ expr
  151     | expr NE expr
  152     | expr AND expr
  153     | expr OR expr
  154     | expr LSHIFT expr
  155     | expr RSHIFT expr
  156     | '~' expr
  157     | '-' expr
  158     | SND expr
  159     | '(' expr SEMI expr ':' expr ')'

  160 @26: /* empty */

  161 expr: RUN aname @26 '(' args ')' Opt_priority
  162     | LEN '(' varref ')'
  163     | ENABLED '(' expr ')'

  164 @27: /* empty */

  165 expr: varref RCV @27 '[' rargs ']'

  166 @28: /* empty */

  167 expr: varref R_RCV @28 '[' rargs ']'
  168     | varref
  169     | cexpr
  170     | CONST
  171     | TIMEOUT
  172     | NONPROGRESS
  173     | PC_VAL '(' expr ')'
  174     | PNAME '[' expr ']' '@' NAME
  175     | PNAME '[' expr ']' ':' pfld
  176     | PNAME '@' NAME
  177     | PNAME ':' pfld

  178 Opt_priority: /* empty */
  179             | PRIORITY CONST

  180 full_expr: expr
  181          | Expr

  182 Opt_enabler: /* empty */
  183            | PROVIDED '(' full_expr ')'
  184            | PROVIDED error

  185 Expr: Probe
  186     | '(' Expr ')'
  187     | Expr AND Expr
  188     | Expr AND expr
  189     | Expr OR Expr
  190     | Expr OR expr
  191     | expr AND Expr
  192     | expr OR Expr

  193 Probe: FULL '(' varref ')'
  194      | NFULL '(' varref ')'
  195      | EMPTY '(' varref ')'
  196      | NEMPTY '(' varref ')'

  197 basetype: TYPE
  198         | UNAME
  199         | error

  200 typ_list: basetype
  201         | basetype ',' typ_list

  202 args: /* empty */
  203     | arg

  204 prargs: /* empty */
  205       | ',' arg

  206 margs: arg
  207      | expr '(' arg ')'

  208 arg: expr
  209    | expr ',' arg

  210 rarg: varref
  211     | EVAL '(' expr ')'
  212     | CONST
  213     | '-' CONST

  214 rargs: rarg
  215      | rarg ',' rargs
  216      | rarg '(' rargs ')'
  217      | '(' rargs ')'

  218 nlst: NAME
  219     | nlst NAME
  220     | nlst ','


Terminals, with rules where they appear

$end (0) 0
'%' (37) 142
'&' (38) 143
'(' (40) 16 34 103 104 105 126 137 159 161 162 163 173 183 186 193
    194 195 196 207 211 216 217
')' (41) 16 34 103 104 105 126 137 159 161 162 163 173 183 186 193
    194 195 196 207 211 216 217
'*' (42) 140
'+' (43) 138
',' (44) 69 71 201 205 209 215 220
'-' (45) 139 157 213
'.' (46) 86
'/' (47) 141
':' (58) 51 52 77 98 159 175 177
'@' (64) 174 176
'[' (91) 21 22 75 78 82 165 167 174 175
']' (93) 21 22 75 78 82 165 167 174 175
'^' (94) 144
'{' (123) 30 46 63 75 119 121 123
'|' (124) 145
'}' (125) 30 46 63 75 119 121 123
'~' (126) 156
error (256) 13 184 199
ASSERT (258) 106
PRINT (259) 103
PRINTM (260) 104 105
C_CODE (261) 41
C_DECL (262) 42
C_EXPR (263) 43
C_STATE (264) 37 39
C_TRACK (265) 38 40
RUN (266) 161
LEN (267) 162
ENABLED (268) 163
EVAL (269) 211
PC_VAL (270) 173
TYPEDEF (271) 30
MTYPE (272)
INLINE (273) 34
LABEL (274)
OF (275) 75
GOTO (276) 97
BREAK (277) 96
ELSE (278) 117
SEMI (279) 12 65 132 133 134 159
IF (280) 93
FI (281) 93
DO (282) 95
OD (283) 95
SEP (284) 130
ATOMIC (285) 119
NON_ATOMIC (286)
D_STEP (287) 121
UNLESS (288) 54
TIMEOUT (289) 171
NONPROGRESS (290) 172
ACTIVE (291) 20 21 22
PROCTYPE (292) 17
D_PROCTYPE (293) 18
HIDDEN (294) 56
SHOW (295) 57
ISLOCAL (296) 58
PRIORITY (297) 179
PROVIDED (298) 183 184
FULL (299) 193
EMPTY (300) 195
NFULL (301) 194
NEMPTY (302) 196
CONST (303) 21 75 77 78 105 170 179 212 213
TYPE (304) 61 63 197
XU (305) 50 52
NAME (306) 16 22 30 31 51 52 76 77 78 80 82 97 98 135 174 176 218 219
UNAME (307) 62 198
PNAME (308) 136 174 175 176 177
INAME (309) 32 126
STRING (310) 37 38 39 40 103
CLAIM (311) 26
TRACE (312) 28
INIT (313) 24
ASGN (314) 60 73 74 99
R_RCV (315) 109 113 167
RCV (316) 90 111 165
O_SND (317) 115
SND (318) 92 158
OR (319) 153 189 190 192
AND (320) 152 187 188 191
NE (321) 151
EQ (322) 150
LE (323) 149
GE (324) 148
LT (325) 111 113 147
GT (326) 111 113 146
RSHIFT (327) 155
LSHIFT (328) 154
DECR (329) 101
INCR (330) 100
NEG (331)
UMIN (332)
DOT (333)


Nonterminals, with rules where they appear

$accept (98)
    on left: 0
program (99)
    on left: 1, on right: 0
units (100)
    on left: 2 3, on right: 1 3
unit (101)
    on left: 4 5 6 7 8 9 10 11 12 13, on right: 2 3
proc (102)
    on left: 16, on right: 4
@1 (103)
    on left: 14, on right: 16
@2 (104)
    on left: 15, on right: 16
proctype (105)
    on left: 17 18, on right: 16
inst (106)
    on left: 19 20 21 22, on right: 16
init (107)
    on left: 24, on right: 5
@3 (108)
    on left: 23, on right: 24
claim (109)
    on left: 26, on right: 6
@4 (110)
    on left: 25, on right: 26
events (111)
    on left: 28, on right: 7
@5 (112)
    on left: 27, on right: 28
utype (113)
    on left: 30, on right: 9
@6 (114)
    on left: 29, on right: 30
nm (115)
    on left: 31 32, on right: 34
ns (116)
    on left: 34, on right: 11
@7 (117)
    on left: 33, on right: 34
c_fcts (118)
    on left: 35 36, on right: 10
cstate (119)
    on left: 37 38 39 40, on right: 36
ccode (120)
    on left: 41 42, on right: 35 107
cexpr (121)
    on left: 43, on right: 169
body (122)
    on left: 46, on right: 16 24 26 28
@8 (123)
    on left: 44, on right: 46
@9 (124)
    on left: 45, on right: 46
sequence (125)
    on left: 47 48, on right: 46 48 119 121 123 130
step (126)
    on left: 49 50 51 52 53 54, on right: 47 48
vis (127)
    on left: 55 56 57 58, on right: 61 62 63
asgn (128)
    on left: 59 60, on right: 63
one_decl (129)
    on left: 61 62 63, on right: 8 49 51 64 65
decl_lst (130)
    on left: 64 65, on right: 30 65 67
decl (131)
    on left: 66 67, on right: 16
vref_lst (132)
    on left: 68 69, on right: 50 69
var_list (133)
    on left: 70 71, on right: 61 62 71
ivar (134)
    on left: 72 73 74, on right: 70 71
ch_init (135)
    on left: 75, on right: 74
vardcl (136)
    on left: 76 77 78, on right: 72 73 74
varref (137)
    on left: 79, on right: 68 69 90 92 99 100 101 104 109 111 113 115
    162 165 167 168 193 194 195 196 210
pfld (138)
    on left: 80 82, on right: 84 175 177
@10 (139)
    on left: 81, on right: 82
cmpnd (140)
    on left: 84, on right: 79 86
@11 (141)
    on left: 83, on right: 84
sfld (142)
    on left: 85 86, on right: 84
stmnt (143)
    on left: 87 88, on right: 53 54 98
Special (144)
    on left: 90 92 93 95 96 97 98, on right: 87
@12 (145)
    on left: 89, on right: 90
@13 (146)
    on left: 91, on right: 92
@14 (147)
    on left: 94, on right: 95
Stmnt (148)
    on left: 99 100 101 103 104 105 106 107 109 111 113 115 116 117
    119 121 123 126, on right: 88 126
@15 (149)
    on left: 102, on right: 103
@16 (150)
    on left: 108, on right: 109
@17 (151)
    on left: 110, on right: 111
@18 (152)
    on left: 112, on right: 113
@19 (153)
    on left: 114, on right: 115
@20 (154)
    on left: 118, on right: 119
@21 (155)
    on left: 120, on right: 121
@22 (156)
    on left: 122, on right: 123
@23 (157)
    on left: 124, on right: 126
@24 (158)
    on left: 125, on right: 126
options (159)
    on left: 127 128, on right: 93 95 128
option (160)
    on left: 130, on right: 127 128
@25 (161)
    on left: 129, on right: 130
OS (162)
    on left: 131 132, on right: 46 119 121 123 130
MS (163)
    on left: 133 134, on right: 48 134
aname (164)
    on left: 135 136, on right: 161
expr (165)
    on left: 137 138 139 140 141 142 143 144 145 146 147 148 149 150
    151 152 153 154 155 156 157 158 159 161 162 163 165 167 168 169
    170 171 172 173 174 175 176 177, on right: 73 82 99 137 138 139
    140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155
    156 157 158 159 163 173 174 175 180 188 190 191 192 207 208 209
    211
@26 (166)
    on left: 160, on right: 161
@27 (167)
    on left: 164, on right: 165
@28 (168)
    on left: 166, on right: 167
Opt_priority (169)
    on left: 178 179, on right: 16 24 161
full_expr (170)
    on left: 180 181, on right: 106 116 183
Opt_enabler (171)
    on left: 182 183 184, on right: 16
Expr (172)
    on left: 185 186 187 188 189 190 191 192, on right: 181 186 187
    188 189 190 191 192
Probe (173)
    on left: 193 194 195 196, on right: 185
basetype (174)
    on left: 197 198 199, on right: 200 201
typ_list (175)
    on left: 200 201, on right: 75 201
args (176)
    on left: 202 203, on right: 34 126 161
prargs (177)
    on left: 204 205, on right: 103
margs (178)
    on left: 206 207, on right: 92 115
arg (179)
    on left: 208 209, on right: 203 205 206 207 209
rarg (180)
    on left: 210 211 212 213, on right: 214 215 216
rargs (181)
    on left: 214 215 216 217, on right: 90 109 111 113 165 167 215
    216 217
nlst (182)
    on left: 218 219 220, on right: 63 219 220


state 0

    0 $accept: . program $end

    error    shift, and go to state 1
    C_CODE   shift, and go to state 2
    C_DECL   shift, and go to state 3
    C_STATE  shift, and go to state 4
    C_TRACK  shift, and go to state 5
    TYPEDEF  shift, and go to state 6
    INLINE   shift, and go to state 7
    SEMI     shift, and go to state 8
    ACTIVE   shift, and go to state 9
    HIDDEN   shift, and go to state 10
    SHOW     shift, and go to state 11
    ISLOCAL  shift, and go to state 12
    CLAIM    shift, and go to state 13
    TRACE    shift, and go to state 14
    INIT     shift, and go to state 15

    PROCTYPE    reduce using rule 19 (inst)
    D_PROCTYPE  reduce using rule 19 (inst)
    TYPE        reduce using rule 55 (vis)
    UNAME       reduce using rule 55 (vis)

    program   go to state 16
    units     go to state 17
    unit      go to state 18
    proc      go to state 19
    inst      go to state 20
    init      go to state 21
    claim     go to state 22
    events    go to state 23
    utype     go to state 24
    ns        go to state 25
    c_fcts    go to state 26
    cstate    go to state 27
    ccode     go to state 28
    vis       go to state 29
    one_decl  go to state 30


state 1

   13 unit: error .

    $default  reduce using rule 13 (unit)


state 2

   41 ccode: C_CODE .

    $default  reduce using rule 41 (ccode)


state 3

   42 ccode: C_DECL .

    $default  reduce using rule 42 (ccode)


state 4

   37 cstate: C_STATE . STRING STRING
   39       | C_STATE . STRING STRING STRING

    STRING  shift, and go to state 31


state 5

   38 cstate: C_TRACK . STRING STRING
   40       | C_TRACK . STRING STRING STRING

    STRING  shift, and go to state 32


state 6

   30 utype: TYPEDEF . NAME @6 '{' decl_lst '}'

    NAME  shift, and go to state 33


state 7

   34 ns: INLINE . nm '(' @7 args ')'

    NAME   shift, and go to state 34
    INAME  shift, and go to state 35

    nm  go to state 36


state 8

   12 unit: SEMI .

    $default  reduce using rule 12 (unit)


state 9

   20 inst: ACTIVE .
   21     | ACTIVE . '[' CONST ']'
   22     | ACTIVE . '[' NAME ']'

    '['  shift, and go to state 37

    $default  reduce using rule 20 (inst)


state 10

   56 vis: HIDDEN .

    $default  reduce using rule 56 (vis)


state 11

   57 vis: SHOW .

    $default  reduce using rule 57 (vis)


state 12

   58 vis: ISLOCAL .

    $default  reduce using rule 58 (vis)


state 13

   26 claim: CLAIM . @4 body

    $default  reduce using rule 25 (@4)

    @4  go to state 38


state 14

   28 events: TRACE . @5 body

    $default  reduce using rule 27 (@5)

    @5  go to state 39


state 15

   24 init: INIT . @3 Opt_priority body

    $default  reduce using rule 23 (@3)

    @3  go to state 40


state 16

    0 $accept: program . $end

    $end  shift, and go to state 41


state 17

    1 program: units .
    3 units: units . unit

    error    shift, and go to state 1
    C_CODE   shift, and go to state 2
    C_DECL   shift, and go to state 3
    C_STATE  shift, and go to state 4
    C_TRACK  shift, and go to state 5
    TYPEDEF  shift, and go to state 6
    INLINE   shift, and go to state 7
    SEMI     shift, and go to state 8
    ACTIVE   shift, and go to state 9
    HIDDEN   shift, and go to state 10
    SHOW     shift, and go to state 11
    ISLOCAL  shift, and go to state 12
    CLAIM    shift, and go to state 13
    TRACE    shift, and go to state 14
    INIT     shift, and go to state 15

    $end        reduce using rule 1 (program)
    PROCTYPE    reduce using rule 19 (inst)
    D_PROCTYPE  reduce using rule 19 (inst)
    TYPE        reduce using rule 55 (vis)
    UNAME       reduce using rule 55 (vis)

    unit      go to state 42
    proc      go to state 19
    inst      go to state 20
    init      go to state 21
    claim     go to state 22
    events    go to state 23
    utype     go to state 24
    ns        go to state 25
    c_fcts    go to state 26
    cstate    go to state 27
    ccode     go to state 28
    vis       go to state 29
    one_decl  go to state 30


state 18

    2 units: unit .

    $default  reduce using rule 2 (units)


state 19

    4 unit: proc .

    $default  reduce using rule 4 (unit)


state 20

   16 proc: inst . proctype NAME @1 '(' decl ')' @2 Opt_priority Opt_enabler body

    PROCTYPE    shift, and go to state 43
    D_PROCTYPE  shift, and go to state 44

    proctype  go to state 45


state 21

    5 unit: init .

    $default  reduce using rule 5 (unit)


state 22

    6 unit: claim .

    $default  reduce using rule 6 (unit)


state 23

    7 unit: events .

    $default  reduce using rule 7 (unit)


state 24

    9 unit: utype .

    $default  reduce using rule 9 (unit)


state 25

   11 unit: ns .

    $default  reduce using rule 11 (unit)


state 26

   10 unit: c_fcts .

    $default  reduce using rule 10 (unit)


state 27

   36 c_fcts: cstate .

    $default  reduce using rule 36 (c_fcts)


state 28

   35 c_fcts: ccode .

    $default  reduce using rule 35 (c_fcts)


state 29

   61 one_decl: vis . TYPE var_list
   62         | vis . UNAME var_list
   63         | vis . TYPE asgn '{' nlst '}'

    TYPE   shift, and go to state 46
    UNAME  shift, and go to state 47


state 30

    8 unit: one_decl .

    $default  reduce using rule 8 (unit)


state 31

   37 cstate: C_STATE STRING . STRING
   39       | C_STATE STRING . STRING STRING

    STRING  shift, and go to state 48


state 32

   38 cstate: C_TRACK STRING . STRING
   40       | C_TRACK STRING . STRING STRING

    STRING  shift, and go to state 49


state 33

   30 utype: TYPEDEF NAME . @6 '{' decl_lst '}'

    $default  reduce using rule 29 (@6)

    @6  go to state 50


state 34

   31 nm: NAME .

    $default  reduce using rule 31 (nm)


state 35

   32 nm: INAME .

    $default  reduce using rule 32 (nm)


state 36

   34 ns: INLINE nm . '(' @7 args ')'

    '('  shift, and go to state 51


state 37

   21 inst: ACTIVE '[' . CONST ']'
   22     | ACTIVE '[' . NAME ']'

    CONST  shift, and go to state 52
    NAME   shift, and go to state 53


state 38

   26 claim: CLAIM @4 . body

    '{'  shift, and go to state 54

    body  go to state 55


state 39

   28 events: TRACE @5 . body

    '{'  shift, and go to state 54

    body  go to state 56


state 40

   24 init: INIT @3 . Opt_priority body

    PRIORITY  shift, and go to state 57

    $default  reduce using rule 178 (Opt_priority)

    Opt_priority  go to state 58


state 41

    0 $accept: program $end .

    $default  accept


state 42

    3 units: units unit .

    $default  reduce using rule 3 (units)


state 43

   17 proctype: PROCTYPE .

    $default  reduce using rule 17 (proctype)


state 44

   18 proctype: D_PROCTYPE .

    $default  reduce using rule 18 (proctype)


state 45

   16 proc: inst proctype . NAME @1 '(' decl ')' @2 Opt_priority Opt_enabler body

    NAME  shift, and go to state 59


state 46

   61 one_decl: vis TYPE . var_list
   63         | vis TYPE . asgn '{' nlst '}'

    NAME  shift, and go to state 60
    ASGN  shift, and go to state 61

    $default  reduce using rule 59 (asgn)

    asgn      go to state 62
    var_list  go to state 63
    ivar      go to state 64
    vardcl    go to state 65


state 47

   62 one_decl: vis UNAME . var_list

    NAME  shift, and go to state 60

    var_list  go to state 66
    ivar      go to state 64
    vardcl    go to state 65


state 48

   37 cstate: C_STATE STRING STRING .
   39       | C_STATE STRING STRING . STRING

    STRING  shift, and go to state 67

    $default  reduce using rule 37 (cstate)


state 49

   38 cstate: C_TRACK STRING STRING .
   40       | C_TRACK STRING STRING . STRING

    STRING  shift, and go to state 68

    $default  reduce using rule 38 (cstate)


state 50

   30 utype: TYPEDEF NAME @6 . '{' decl_lst '}'

    '{'  shift, and go to state 69


state 51

   34 ns: INLINE nm '(' . @7 args ')'

    $default  reduce using rule 33 (@7)

    @7  go to state 70


state 52

   21 inst: ACTIVE '[' CONST . ']'

    ']'  shift, and go to state 71


state 53

   22 inst: ACTIVE '[' NAME . ']'

    ']'  shift, and go to state 72


state 54

   46 body: '{' . @8 sequence OS @9 '}'

    $default  reduce using rule 44 (@8)

    @8  go to state 73


state 55

   26 claim: CLAIM @4 body .

    $default  reduce using rule 26 (claim)


state 56

   28 events: TRACE @5 body .

    $default  reduce using rule 28 (events)


state 57

  179 Opt_priority: PRIORITY . CONST

    CONST  shift, and go to state 74


state 58

   24 init: INIT @3 Opt_priority . body

    '{'  shift, and go to state 54

    body  go to state 75


state 59

   16 proc: inst proctype NAME . @1 '(' decl ')' @2 Opt_priority Opt_enabler body

    $default  reduce using rule 14 (@1)

    @1  go to state 76


state 60

   76 vardcl: NAME .
   77       | NAME . ':' CONST
   78       | NAME . '[' CONST ']'

    '['  shift, and go to state 77
    ':'  shift, and go to state 78

    $default  reduce using rule 76 (vardcl)


state 61

   60 asgn: ASGN .

    $default  reduce using rule 60 (asgn)


state 62

   63 one_decl: vis TYPE asgn . '{' nlst '}'

    '{'  shift, and go to state 79


state 63

   61 one_decl: vis TYPE var_list .

    $default  reduce using rule 61 (one_decl)


state 64

   70 var_list: ivar .
   71         | ivar . ',' var_list

    ','  shift, and go to state 80

    $default  reduce using rule 70 (var_list)


state 65

   72 ivar: vardcl .
   73     | vardcl . ASGN expr
   74     | vardcl . ASGN ch_init

    ASGN  shift, and go to state 81

    $default  reduce using rule 72 (ivar)


state 66

   62 one_decl: vis UNAME var_list .

    $default  reduce using rule 62 (one_decl)


state 67

   39 cstate: C_STATE STRING STRING STRING .

    $default  reduce using rule 39 (cstate)


state 68

   40 cstate: C_TRACK STRING STRING STRING .

    $default  reduce using rule 40 (cstate)


state 69

   30 utype: TYPEDEF NAME @6 '{' . decl_lst '}'

    HIDDEN   shift, and go to state 10
    SHOW     shift, and go to state 11
    ISLOCAL  shift, and go to state 12

    $default  reduce using rule 55 (vis)

    vis       go to state 29
    one_decl  go to state 82
    decl_lst  go to state 83


state 70

   34 ns: INLINE nm '(' @7 . args ')'

    C_EXPR       shift, and go to state 84
    RUN          shift, and go to state 85
    LEN          shift, and go to state 86
    ENABLED      shift, and go to state 87
    PC_VAL       shift, and go to state 88
    TIMEOUT      shift, and go to state 89
    NONPROGRESS  shift, and go to state 90
    CONST        shift, and go to state 91
    NAME         shift, and go to state 92
    PNAME        shift, and go to state 93
    SND          shift, and go to state 94
    '-'          shift, and go to state 95
    '~'          shift, and go to state 96
    '('          shift, and go to state 97

    $default  reduce using rule 202 (args)

    cexpr   go to state 98
    varref  go to state 99
    pfld    go to state 100
    cmpnd   go to state 101
    expr    go to state 102
    args    go to state 103
    arg     go to state 104


state 71

   21 inst: ACTIVE '[' CONST ']' .

    $default  reduce using rule 21 (inst)


state 72

   22 inst: ACTIVE '[' NAME ']' .

    $default  reduce using rule 22 (inst)


state 73

   46 body: '{' @8 . sequence OS @9 '}'

    ASSERT       shift, and go to state 105
    PRINT        shift, and go to state 106
    PRINTM       shift, and go to state 107
    C_CODE       shift, and go to state 2
    C_DECL       shift, and go to state 3
    C_EXPR       shift, and go to state 84
    RUN          shift, and go to state 85
    LEN          shift, and go to state 86
    ENABLED      shift, and go to state 87
    PC_VAL       shift, and go to state 88
    GOTO         shift, and go to state 108
    BREAK        shift, and go to state 109
    ELSE         shift, and go to state 110
    IF           shift, and go to state 111
    DO           shift, and go to state 112
    ATOMIC       shift, and go to state 113
    D_STEP       shift, and go to state 114
    TIMEOUT      shift, and go to state 89
    NONPROGRESS  shift, and go to state 90
    HIDDEN       shift, and go to state 10
    SHOW         shift, and go to state 11
    ISLOCAL      shift, and go to state 12
    FULL         shift, and go to state 115
    EMPTY        shift, and go to state 116
    NFULL        shift, and go to state 117
    NEMPTY       shift, and go to state 118
    CONST        shift, and go to state 91
    XU           shift, and go to state 119
    NAME         shift, and go to state 120
    PNAME        shift, and go to state 93
    INAME        shift, and go to state 121
    SND          shift, and go to state 94
    '-'          shift, and go to state 95
    '~'          shift, and go to state 96
    '('          shift, and go to state 122
    '{'          shift, and go to state 123

    $default  reduce using rule 55 (vis)

    ccode      go to state 124
    cexpr      go to state 98
    sequence   go to state 125
    step       go to state 126
    vis        go to state 29
    one_decl   go to state 127
    varref     go to state 128
    pfld       go to state 100
    cmpnd      go to state 101
    stmnt      go to state 129
    Special    go to state 130
    Stmnt      go to state 131
    expr       go to state 132
    full_expr  go to state 133
    Expr       go to state 134
    Probe      go to state 135


state 74

  179 Opt_priority: PRIORITY CONST .

    $default  reduce using rule 179 (Opt_priority)


state 75

   24 init: INIT @3 Opt_priority body .

    $default  reduce using rule 24 (init)


state 76

   16 proc: inst proctype NAME @1 . '(' decl ')' @2 Opt_priority Opt_enabler body

    '('  shift, and go to state 136


state 77

   78 vardcl: NAME '[' . CONST ']'

    CONST  shift, and go to state 137


state 78

   77 vardcl: NAME ':' . CONST

    CONST  shift, and go to state 138


state 79

   63 one_decl: vis TYPE asgn '{' . nlst '}'

    NAME  shift, and go to state 139

    nlst  go to state 140


state 80

   71 var_list: ivar ',' . var_list

    NAME  shift, and go to state 60

    var_list  go to state 141
    ivar      go to state 64
    vardcl    go to state 65


state 81

   73 ivar: vardcl ASGN . expr
   74     | vardcl ASGN . ch_init

    C_EXPR       shift, and go to state 84
    RUN          shift, and go to state 85
    LEN          shift, and go to state 86
    ENABLED      shift, and go to state 87
    PC_VAL       shift, and go to state 88
    TIMEOUT      shift, and go to state 89
    NONPROGRESS  shift, and go to state 90
    CONST        shift, and go to state 91
    NAME         shift, and go to state 92
    PNAME        shift, and go to state 93
    SND          shift, and go to state 94
    '-'          shift, and go to state 95
    '~'          shift, and go to state 96
    '('          shift, and go to state 97
    '['          shift, and go to state 142

    cexpr    go to state 98
    ch_init  go to state 143
    varref   go to state 99
    pfld     go to state 100
    cmpnd    go to state 101
    expr     go to state 144


state 82

   64 decl_lst: one_decl .
   65         | one_decl . SEMI decl_lst

    SEMI  shift, and go to state 145

    $default  reduce using rule 64 (decl_lst)


state 83

   30 utype: TYPEDEF NAME @6 '{' decl_lst . '}'

    '}'  shift, and go to state 146


state 84

   43 cexpr: C_EXPR .

    $default  reduce using rule 43 (cexpr)


state 85

  161 expr: RUN . aname @26 '(' args ')' Opt_priority

    NAME   shift, and go to state 147
    PNAME  shift, and go to state 148

    aname  go to state 149


state 86

  162 expr: LEN . '(' varref ')'

    '('  shift, and go to state 150


state 87

  163 expr: ENABLED . '(' expr ')'

    '('  shift, and go to state 151


state 88

  173 expr: PC_VAL . '(' expr ')'

    '('  shift, and go to state 152


state 89

  171 expr: TIMEOUT .

    $default  reduce using rule 171 (expr)


state 90

  172 expr: NONPROGRESS .

    $default  reduce using rule 172 (expr)


state 91

  170 expr: CONST .

    $default  reduce using rule 170 (expr)


state 92

   80 pfld: NAME .
   82     | NAME . @10 '[' expr ']'

    '['       reduce using rule 81 (@10)
    $default  reduce using rule 80 (pfld)

    @10  go to state 153


state 93

  174 expr: PNAME . '[' expr ']' '@' NAME
  175     | PNAME . '[' expr ']' ':' pfld
  176     | PNAME . '@' NAME
  177     | PNAME . ':' pfld

    '['  shift, and go to state 154
    ':'  shift, and go to state 155
    '@'  shift, and go to state 156


state 94

  158 expr: SND . expr

    C_EXPR       shift, and go to state 84
    RUN          shift, and go to state 85
    LEN          shift, and go to state 86
    ENABLED      shift, and go to state 87
    PC_VAL       shift, and go to state 88
    TIMEOUT      shift, and go to state 89
    NONPROGRESS  shift, and go to state 90
    CONST        shift, and go to state 91
    NAME         shift, and go to state 92
    PNAME        shift, and go to state 93
    SND          shift, and go to state 94
    '-'          shift, and go to state 95
    '~'          shift, and go to state 96
    '('          shift, and go to state 97

    cexpr   go to state 98
    varref  go to state 99
    pfld    go to state 100
    cmpnd   go to state 101
    expr    go to state 157


state 95

  157 expr: '-' . expr

    C_EXPR       shift, and go to state 84
    RUN          shift, and go to state 85
    LEN          shift, and go to state 86
    ENABLED      shift, and go to state 87
    PC_VAL       shift, and go to state 88
    TIMEOUT      shift, and go to state 89
    NONPROGRESS  shift, and go to state 90
    CONST        shift, and go to state 91
    NAME         shift, and go to state 92
    PNAME        shift, and go to state 93
    SND          shift, and go to state 94
    '-'          shift, and go to state 95
    '~'          shift, and go to state 96
    '('          shift, and go to state 97

    cexpr   go to state 98
    varref  go to state 99
    pfld    go to state 100
    cmpnd   go to state 101
    expr    go to state 158


state 96

  156 expr: '~' . expr

    C_EXPR       shift, and go to state 84
    RUN          shift, and go to state 85
    LEN          shift, and go to state 86
    ENABLED      shift, and go to state 87
    PC_VAL       shift, and go to state 88
    TIMEOUT      shift, and go to state 89
    NONPROGRESS  shift, and go to state 90
    CONST        shift, and go to state 91
    NAME         shift, and go to state 92
    PNAME        shift, and go to state 93
    SND          shift, and go to state 94
    '-'          shift, and go to state 95
    '~'          shift, and go to state 96
    '('          shift, and go to state 97

    cexpr   go to state 98
    varref  go to state 99
    pfld    go to state 100
    cmpnd   go to state 101
    expr    go to state 159


state 97

  137 expr: '(' . expr ')'
  159     | '(' . expr SEMI expr ':' expr ')'
